--- a/src/main/webapp/css/bargraph.css
+++ b/src/main/webapp/css/bargraph.css
@@ -8,6 +8,7 @@
 
 .bar-label {
 	fill: white;
+	font-size: 10px;
 }
 
 .axis--x text {
@@ -26,13 +27,6 @@
     position: relative;
     top: 10px;
     right: -50px;
-}
-
-input[class*="-chart-"] {
-    border: 1px solid #ddd;
-    border-radius: 15px;
-    cursor: pointer;
-    font-size: 0.8em;
 }
 
 .selected {
