--- a/src/main/webapp/bootstrap-frontend/css/index.css
+++ b/src/main/webapp/bootstrap-frontend/css/index.css
@@ -20,12 +20,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#citations {
-    font-size: 0.8rem;
+#example-link {
+    font-size: 0.8rem;	
 }
 
-#genelist {
-    height: 300px;
+#citations {
+    font-size: 0.8rem;
 }
 
 .col-form-label {
@@ -47,4 +47,38 @@
 
 #ljp-table{
 	font-size: 0.9rem;
+	max-width: 100%;
+}
+
+th {
+	vertical-align: middle;
+}
+
+table.dataTable.table-sm .sorting:before,
+table.dataTable.table-sm .sorting_asc:before,
+table.dataTable.table-sm .sorting_desc:before {
+  top: 5px;
+  right: 0.8em;
+}
+table.dataTable.table-sm .sorting:after,
+table.dataTable.table-sm .sorting_asc:after,
+table.dataTable.table-sm .sorting_desc:after {
+  top: 16px;
+}
+
+table.dataTable thead .sorting:before,
+table.dataTable thead .sorting_asc:before,
+table.dataTable thead .sorting_desc:before,
+table.dataTable thead .sorting_asc_disabled:before,
+table.dataTable thead .sorting_desc_disabled:before {
+  right: 1em;
+  content: "\25B2";
+}
+table.dataTable thead .sorting:after,
+table.dataTable thead .sorting_asc:after,
+table.dataTable thead .sorting_desc:after,
+table.dataTable thead .sorting_asc_disabled:after,
+table.dataTable thead .sorting_desc_disabled:after {
+  right: 0.8em;
+  content: "\25BC";
 }
