--- a/src/main/webapp/css/results.css
+++ b/src/main/webapp/css/results.css
@@ -36,11 +36,6 @@
 	width: 100%;
 	height: 100%;
 }
- 
-.img-fluid {
-	width: 100%;
-	height: auto;
-}
 
 .table {
 	max-width: 100%;
@@ -51,10 +46,15 @@
 	font-size: 0.7rem;
 }
 
+.btn-outline-secondary.selected {
+	color: black
+}
+
 .nav {
 	font-size: 0.8rem;
 }
 
-.btn-outline-secondary.selected {
-	color: black
+.nav-link {
+    display: block;
+    padding: .3rem .7rem;
 }
