Fixes for dashboard and a new old API page

--- a/src/main/webapp/templates/help/api.html
+++ b/src/main/webapp/templates/help/api.html
@@ -1,5 +1,5 @@
 <div id="api-header"><div id="api-method">POST</div><div id="api-endpoint">/api</div><div id="api-descr">Allows to POST data in multipart/form-data format and returns JSON with results for each type of analysis.</div></div>
-<table id="api-table">
+<table class="table table-sm">
 	<tbody>
 		<tr>
 			<th>Form field</th>
