--- a/src/main/webapp/css/results.css
+++ b/src/main/webapp/css/results.css
@@ -28,6 +28,22 @@
     font-size: 0.7rem;
 }
 
+#chea-tabs,
+#kea-tabs {
+	border-bottom: none;
+}
+
+.tabs-card-header {
+	padding-top: 1rem;
+    padding-right: 1.25rem;
+    padding-bottom: 0rem;
+    padding-left: 1.25rem;
+}
+
+.tabs-card-title {
+	margin-bottom: 0rem;
+}
+
 #chea-table,
 #kea-table
 {
