--- a/src/main/webapp/css/results.css
+++ b/src/main/webapp/css/results.css
@@ -1,4 +1,3 @@
-/* X2K header and logo */
 #logo {
     margin: 10px;
     padding: 0;
@@ -61,6 +60,13 @@
 	border: none;
 	width: 100%;
 	height: 100%;
+}
+
+@media (min-width: 768px) {
+	.modal-xl {
+		width: 90%;
+		max-width:900px;
+		}
 }
 
 .table {
