Clean-up; Avi's suggestions

--- a/src/main/webapp/css/bargraph.css
+++ b/src/main/webapp/css/bargraph.css
@@ -8,11 +8,12 @@
 
 .bar-label {
 	fill: white;
-	font-size: 10px;
+	font-size: 1rem;
 }
 
 .axis--x text {
     fill: black;
+    font-size: 1rem;
 }
 
 .axis--y path {
