--- a/src/main/webapp/css/results.css
+++ b/src/main/webapp/css/results.css
@@ -44,10 +44,7 @@
 #chea-table,
 #kea-table
 {
- 	border-collapse: collapse;
-	border: none;
-	width: 100%;
-	height: 100%;
+	font-size: 0.6rem;
 }
 
 /* I need a larger modal for expanded view */
