A lot of minor fixes

--- a/src/main/webapp/css/results_index.css
+++ b/src/main/webapp/css/results_index.css
@@ -70,3 +70,15 @@ thead th {
 .dash-nav-item {
     margin-top: 0.25rem;
 }
+
+.navbar-brand {
+	font-size: 1rem;
+}
+
+#logo-scroll {
+	display: none;
+}
+
+.nav-pills .nav-link.active, .show>.nav-pills .nav-link {
+	background-color: #d0d0dc;
+}
