--- a/src/main/webapp/css/index_beta.css
+++ b/src/main/webapp/css/index_beta.css
@@ -23,7 +23,13 @@ body {
     
 }
 
+#x2k-navbar{
+	padding-left: 12.5%;
+}
 
+#scrollspy-nav {
+	margin-top: 30px;
+}
 /* X2K header and logo */
 #logo {
     text-align: center;
@@ -170,5 +176,5 @@ a {
 
     width: 100%;
     height: 100%;
-    background:rgba(255,255,255,0.5);
+    background:rgba(255,255,255,0.4);
 }
