--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -43,20 +43,20 @@
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.1/js/buttons.print.min.js"></script>
 
     <!--Own-->
-    <link rel="stylesheet" href="css/bargraph.css">
-    <link rel="stylesheet" href="css/network.css">
-    <link rel="stylesheet" href="css/atooltip.css">
-    <link rel="stylesheet" href="css/results.css">
-    <link rel="stylesheet" href="css/results_index.css">
-    <link rel="stylesheet" href="css/index_beta.css">
+    <link rel="stylesheet" href="css/bargraph.dist.css">
+    <link rel="stylesheet" href="css/network.dist.css">
+    <link rel="stylesheet" href="css/atooltip.dist.css">
+    <link rel="stylesheet" href="css/results.dist.css">
+    <link rel="stylesheet" href="css/results_index.dist.css">
+    <link rel="stylesheet" href="css/index_beta.dist.css">
 
-    <script src="js/bargraph.js"></script>
-    <script src="js/results.js"></script>
-    <script src="js/results_index.js"></script>
-    <script src="js/network.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/ljp.js"></script>
-    <script src="js/saveSvgAsPng.js"></script>
+    <script src="js/bargraph.dist.js"></script>
+    <script src="js/results.dist.js"></script>
+    <script src="js/results_index.dist.js"></script>
+    <script src="js/network.dist.js"></script>
+    <script src="js/index.dist.js"></script>
+    <script src="js/ljp.dist.js"></script>
+    <script src="js/saveSvgAsPng.dist.js"></script>
 
     <!--GA-->
     <script>
