Updated table format for new datasets

--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -1978,10 +1978,11 @@ C1d' \
                     <code>java -jar L2N.jar gene_list [background_file...] output.xml</code>
                 </p>
             </div>
+
             <div id="datasets">
                 <h4>Download datasets</h4>
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-12">
                         <h6>Protein-Protein Interaction</h6>
                         <div class="table-responsive">
                             <table class="table table-sm">
@@ -1989,6 +1990,8 @@ C1d' \
                                 <tr>
                                     <th>Link</th>
                                     <th>PPIs</th>
+                                    <th>Proteins</th>
+                                    <th>PMIDs</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -2045,7 +2048,7 @@ C1d' \
                         </div>
                     </div>
 
-                    <div class="col-sm-4">
+                    <div class="col-sm-12">
                         <h6>Transcriptional Regulation</h6>
                         <div class="table-responsive">
                             <table class="table table-sm">
@@ -2053,6 +2056,8 @@ C1d' \
                                 <tr>
                                     <th>Link</th>
                                     <th>TFs</th>
+                                    <th>Targets</th>
+                                    <th>PMIDs</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -2077,20 +2082,72 @@ C1d' \
                         </div>
                     </div>
 
-                    <div class="col-sm-4">
+                    <div class="col-sm-12">
                         <h6>Kinome Regulation</h6>
                         <div class="table-responsive">
                             <table class="table table-sm">
                                 <thead>
                                 <tr>
                                     <th>Link</th>
-                                    <th>Kinase-substrate pairs</th>
+                                    <th>Kinase-<br class="visible-sm" />substrates</th>
+                                    <th>Kinases</th>
+                                    <th>Substrates</th>
+                                    <th>PMIDs</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr>
                                     <td><a href="datasets/KEA_2017.zip">KEA 2017</a></td>
                                     <td>11,420</td>
+                                </tr>
+                                <tr>
+                                    <td>HPRD</td>
+                                    <td>4833</td>
+                                    <td>176</td>
+                                    <td>2044</td>
+                                    <td>257</td>
+                                </tr>
+                                <tr>
+                                    <td>iPTMnet</td>
+                                    <td>5153</td>
+                                    <td>161</td>
+                                    <td>2135</td>
+                                    <td>716</td>
+                                </tr>
+                                <tr>
+                                    <td>iREF</td>
+                                    <td>27097</td>
+                                    <td>437</td>
+                                    <td>7915</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>MINT</td>
+                                    <td>1314</td>
+                                    <td>90</td>
+                                    <td>879</td>
+                                    <td>450</td>
+                                </tr>
+                                <tr>
+                                    <td>NetworkIN_2017</td>
+                                    <td>169059</td>
+                                    <td>207</td>
+                                    <td>8308</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>Phospho.ELM</td>
+                                    <td>1149</td>
+                                    <td>68</td>
+                                    <td>714</td>
+                                    <td>1458</td>
+                                </tr>
+                                <tr>
+                                    <td>PhosphositePlus</td>
+                                    <td>6434</td>
+                                    <td>168</td>
+                                    <td>2680</td>
+                                    <td></td>
                                 </tr>
                                 </tbody>
                             </table>
