Replaced data hints with Coming soon...

--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -663,7 +663,7 @@
                                             <button class="info-popover-button ml-auto"
 		                                            data-toggle="popover"
 	                                            	title="What is Expression2Kinases?"
-	                                            	data-content="asd">
+	                                            	data-content="Coming soon...">
 	                                            <i class="fa fa-question-circle fa-2x text-muted"></i>
 	                                        </button>
 
