Added IE warning message

--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -112,6 +112,9 @@
 
 <div class="container-fluid">
     <div class="row justify-content-center bg-light">
+        <div class="col-sm-9 show-on-ie" style="display: none; color: red; font-weight: bold; text-align:center;">
+            For best app performance, please use a browser other than Internet Explorer.
+        </div>
         <div class="col-sm-9 bg-white">
             <div class="my-3 mx-2">
                 <h4>Submit</h4>
