Made d3 work in popup and cleaned export code

--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -655,7 +655,7 @@
                                         <nav class="nav nav-tabs navbar-light bg-light dash-nav" role="tablist">
                                             <button type="button" class="expand" data-toggle="modal"
                                                     data-target="#dashboardFullModal"
-                                                    data-whatever="#x2k-network"
+                                                    data-whatever="#x2k-network X2K"
                                                     data-modal-title="Expression2Kinases">
                                                     <i class="fa fa-expand" aria-hidden="true"></i>
                                             </button>
@@ -685,7 +685,7 @@
                                         <nav class="nav nav-tabs navbar-light bg-light dash-nav" role="tablist">
                                             <button type="button" class="expand" data-toggle="modal"
                                                     data-target="#dashboardFullModal"
-                                                    data-whatever="#chea-results"
+                                                    data-whatever="#chea-results ChEA"
                                                     data-modal-title="Transcription Factor Enrichment Analysis (TFEA)">
                                                 <i class="fa fa-expand" aria-hidden="true"></i>
                                             </button>
@@ -753,7 +753,7 @@
                                         <nav class="nav nav-tabs navbar-light bg-light dash-nav" role="tablist">
                                             <button type="button" class="expand" data-toggle="modal"
                                                     data-target="#dashboardFullModal"
-                                                    data-whatever="#network-g2n"
+                                                    data-whatever="#network-g2n G2N"
                                                     data-modal-title="Protein-Protein Interaction Expansion">
                                                     <i class="fa fa-expand" aria-hidden="true"></i>
                                             </button>
@@ -783,7 +783,7 @@
                                         <nav class="nav nav-tabs navbar-light bg-light dash-nav" role="tablist">
                                             <button type="button" class="expand" data-toggle="modal"
                                                     data-target="#dashboardFullModal"
-                                                    data-whatever="#kea-results"
+                                                    data-whatever="#kea-results KEA"
                                                     data-modal-title="Kinase Enrichment Analysis (KEA)">
                                                 <i class="fa fa-expand" aria-hidden="true"></i>
                                             </button>
